# systalk-chat-test-framework

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  conftest.py  docker-compose.yml  dvc.yaml  mypy.ini  pyproject.toml  pytest.ini  report.html  requirements.txt
.github/workflows/: ci.yml  nightly.yml  release.yml
ai_models/: README.md  bias_detector.py  chat_model.py  drift_monitor.py  hallucination_detector.py  response_evaluator.py
config/environments/: dev.yaml.example
data/: .gitignore  test_datasets.dvc
docs/: API.md  API_Testing_Tools_Guide.md  ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  DATA_MANAGEMENT.md  DEMO_GUIDE.md  INTERVIEW_PREP.md  MONITORING.md  PORTFOLIO_GUIDE.md  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md
fixtures/: api_fixtures.py  browser_fixtures.py
monitoring/: ai_metrics_collector.py  alerts.yml  grafana-dashboard.json  observability.py  prometheus.yml  pytest_plugin.py
pages/: README.md  base_page.py  chat_page.py
tests/: README.md
tests/ai_quality/: test_response_quality.py
tests/e2e/: test_chat_flow.py  test_chat_system_e2e.py
tests/integration/: test_chat_model_integration.py  test_config.py
tests/llm_specific/: test_prompt_injection.py
tests/performance/: test_load_testing.py
tests/security/: test_security_validation.py
tests/unit/: test_chat_model.py  test_sample.py
utils/: README.md  test_data_generator.py  test_data_validator.py
