[project]
name = "systalk-chat-test-framework"
version = "0.1.0"
description = "AI/LLM 智能客服自動化測試框架"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/systalk-chat-test-framework"
Documentation = "https://github.com/yourusername/systalk-chat-test-framework/docs"

[tool.pytest.ini_options]
# pytest 額外配置（與 pytest.ini 互補）
asyncio_mode = "auto"
timeout = 300  # 單個測試最長執行時間（秒）

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除目錄
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true